[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Play_button.png" type="Texture" id=1]
[ext_resource path="res://Assets/Saves_button.png" type="Texture" id=2]
[ext_resource path="res://Assets/Exit_button.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/manaspace/manaspc.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Play_button_selected.png" type="Texture" id=5]
[ext_resource path="res://Assets/Exit_button_selected.png" type="Texture" id=6]
[ext_resource path="res://Utilities/Title Screen.gd" type="Script" id=7]
[ext_resource path="res://Assets/Saves_button_selected.png" type="Texture" id=8]
[ext_resource path="res://Assets/Fonts/pixeltype/Pixeltype.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
extra_spacing_bottom = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 9 )

[node name="TitleScreen" type="Node"]
script = ExtResource( 7 )

[node name="Control2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control2"]
anchor_left = 0.537
anchor_top = 0.067
anchor_right = 0.537
anchor_bottom = 0.067
margin_left = -107.84
margin_top = -0.0799999
margin_right = 148.16
margin_bottom = 63.92
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0.52549, 1, 1 )
bbcode_enabled = true
bbcode_text = "[shake ]Bob's Bizzare   Adventure[/shake]"
text = "Bob's Bizzare   Adventure"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.481
anchor_top = 0.379
anchor_right = 0.481
anchor_bottom = 0.379
margin_left = -79.8545
margin_top = 0.0400009
margin_right = 80.1455
margin_bottom = 113.04
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 160.0
margin_bottom = 113.0
alignment = 1

[node name="Play" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 35.0
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 5 )

[node name="Saves" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 160.0
margin_bottom = 74.0
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 8 )

[node name="Exit" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 160.0
margin_bottom = 113.0
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.518
anchor_top = 0.927
anchor_right = 0.518
anchor_bottom = 0.927
margin_left = -93.76
margin_top = 2.52
margin_right = 98.24
margin_bottom = 15.52
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Version" type="RichTextLabel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "You're not supposed to see this text. If you do, send a screenshot to Sreenington."
text = "You're not supposed to see this text. If you do, send a screenshot to Sreenington."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Saves" to="." method="_on_Saves_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
